# agentops-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: dependencies.py  main.py
apps/api/migrations/: env.py
apps/api/scripts/: test_incident_insert.py
automation/INC-0017c76c/: remediation.md
automation/INC-03bdd5da/: remediation.md
automation/INC-TEST-001/: remediation.md
datasets/benchmarks/application/: memory_leak.yaml  thread_pool_exhaustion.yaml
datasets/benchmarks/aws/: cloudwatch_alarm_storm.yaml  eventbridge_failure.yaml  lambda_timeout.yaml  sqs_backlog.yaml
datasets/benchmarks/database/: connection_pool_exhaustion.yaml  (+4 more)
docs/: 01-system-architecture.md  02-incident-schema.md  03-langgraph-state.md  04-database-schema.md  05-repository-structure.md  engineering-decisions.md
infra/bootstrap/: create_eventbridge_rule.sh  create_eventbridge_target.sh  create_resources.sh  sample_alarm_event.json
infra/docker/: api.Dockerfile
reports/: benchmark-report.md  benchmark-results.json  run-state.json
reports/langfuse_experiment_runs/: run-1-gemini-flash-3.1.txt
services/eval-engine/: benchmark_adapter.py  benchmark_discovery.py  benchmark_loader.py  benchmark_runner.py  benchmark_suite.py  console.py  evaluator.py  pyproject.toml  report_generator.py  run_langfuse_evals.py  run_suite.py  upload_to_langfuse.py
services/incident-worker/: pyproject.toml  worker.py
services/incident_worker/: context_collector.py  pyproject.toml  resume_workflow.py  worker.py
(+42 files in other folders)
