[project]
name = "agentops-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-semantic-conventions>=0.64b0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/shared",
    "packages/agents",
    "packages/workflows",
    "services/incident_worker",
    "services/eval-engine",
]
